re-arrange api
