# allianceauth_pve/api/rotations.py
@@ -1,26 +1,25 @@
 from ninja import Router
 
-from django.db.models import Count, F, Subquery, Sum
+from django.db.models import Count, F
 from django.db.models.functions import Coalesce
 from django.contrib.auth.models import User
 from django.utils import timezone
 
-from ..models import EntryRole, Rotation, Entry
+from ..models import Rotation
 from .schema import (
     RotationSchema,
     RotationSummarySchema,
     RotationProjectSummarySchema,
-    EntrySchema,
-    EntryRoleSchema,
-    EntryCharacterSchema,
-    EntryDetailsSchema,
     NewRotationSchema,
     CloseRotationSchema
 )
 from .authenticators import NeedsPermission
 from ..utils import ensure_rotation_presets_applied
 
+from .entries import router as entries_router
+
 router = Router(tags=["rotations"])
+router.add_router("/{int:rotation_id}/entries", entries_router)
 
 
 @router.get("/", response=list[RotationSchema])
@@ -131,95 +130,3 @@ def get_rotation_project_summaries(request, rotation_id: int):
         {'project': project, 'summary': summary}
         for project, summary in rotation.funding_projects_summary.items()
     ]
-
-
-@router.get("/{int:rotation_id}/entries/", response={200: list[EntrySchema], 404: None})
-def get_rotation_entries(request, rotation_id: int):
-    try:
-        rotation = Rotation.objects.get(pk=rotation_id)
-    except Rotation.DoesNotExist:
-        return 404, None
-
-    return 200, (
-        rotation.entries
-        .select_related('created_by__profile__main_character')
-        .order_by('-created_at')
-    )
-
-
-@router.get("/{int:rotation_id}/entries/{int:entry_id}/", response={200: EntryDetailsSchema, 404: None})
-def get_rotation_entry(request, rotation_id: int, entry_id: int):
-    try:
-        entry = (
-            Entry.objects
-            .select_related(
-                'created_by__profile__main_character',
-                'funding_project',
-                'rotation'
-            )
-            .get(pk=entry_id, rotation_id=rotation_id)
-        )
-        return 200, entry
-    except Entry.DoesNotExist:
-        return 404, None
-
-
-@router.delete(
-    "/{int:rotation_id}/entries/{int:entry_id}/",
-    response={200: None, 403: str, 404: None},
-    auth=NeedsPermission('allianceauth_pve.manage_entries')
-)
-def delete_rotation_entry(request, rotation_id: int, entry_id: int):
-    try:
-        entry = (
-            Entry.objects
-            .select_related('created_by', 'rotation')
-            .get(pk=entry_id, rotation_id=rotation_id)
-        )
-    except Entry.DoesNotExist:
-        return 404, None
-
-    if (entry.created_by != request.user and not request.user.is_superuser) or entry.rotation.is_closed:
-        return 403, "You cannot delete this entry"
-
-    entry.delete()
-
-    return 200, None
-
-
-@router.get("/{int:rotation_id}/entries/{int:entry_id}/roles/", response={200: list[EntryRoleSchema], 404: None})
-def get_rotation_entry_roles(request, rotation_id: int, entry_id: int):
-    try:
-        entry = Entry.objects.get(pk=entry_id, rotation_id=rotation_id)
-    except Entry.DoesNotExist:
-        return 404, None
-
-    total_value_qs = (
-        EntryRole.objects
-        .filter(entry_id=entry_id)
-        .values('entry')
-        .annotate(total=Sum('value'))
-        .values('total')
-    )
-
-    return 200, entry.roles.annotate(
-        role_approximate_percentage=F('value') * 100.0 / Subquery(total_value_qs)
-    )
-
-
-@router.get("/{int:rotation_id}/entries/{int:entry_id}/shares/", response={200: list[EntryCharacterSchema], 404: None})
-def get_rotation_entry_shares(request, rotation_id: int, entry_id: int):
-    try:
-        entry = Entry.objects.get(pk=entry_id, rotation_id=rotation_id)
-    except Entry.DoesNotExist:
-        return 404, None
-
-    return 200, (
-        entry.ratting_shares
-        .select_related(
-            'user__profile__main_character',
-            'user_character',
-            'role'
-        )
-        .with_totals()
-    )
